--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.ruslan.kravchuk</groupId>
     <artifactId>Auto.Ria.Project</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
@@ -34,8 +34,7 @@
         		</dependency>
         		<dependency>
                     <groupId>org.thymeleaf.extras</groupId>
-                    <artifactId>thymeleaf-extras-springsecurity4</artifactId>
-                    <version>2.1.2.RELEASE</version>
+                    <artifactId>thymeleaf-extras-springsecurity5</artifactId>
                 </dependency>
         		<dependency>
         			<groupId>javax.servlet</groupId>
@@ -64,10 +63,20 @@
         			<artifactId>postgresql</artifactId>
         			<scope>runtime</scope>
         		</dependency>
+        			<dependency>
+                			<groupId>org.projectlombok</groupId>
+                			<artifactId>lombok</artifactId>
+                		</dependency>
         		<dependency>
-        			<groupId>org.projectlombok</groupId>
-        			<artifactId>lombok</artifactId>
-        		</dependency>
+                			<groupId>com.vladmihalcea</groupId>
+                			<artifactId>hibernate-types-52</artifactId>
+                			<version>2.9.9</version>
+                		</dependency>
+                		<dependency>
+                        			<groupId>io.jsonwebtoken</groupId>
+                        			<artifactId>jjwt</artifactId>
+                        			<version>0.9.0</version>
+                        		</dependency>
         		<dependency>
                         <groupId>commons-logging</groupId>
                         <artifactId>commons-logging</artifactId>
