--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
        <relativePath/>
    </parent>
     <properties>
-        <java.version>1.11</java.version>
+        <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -58,6 +58,11 @@
         			<artifactId>spring-security-core</artifactId>
         			<version>5.3.1.RELEASE</version>
         		</dependency>
+        		  <dependency>
+                            <groupId>org.webjars</groupId>
+                            <artifactId>bootstrap</artifactId>
+                             <version>4.1.0</version>
+                        </dependency>
         		<dependency>
         			<groupId>org.postgresql</groupId>
         			<artifactId>postgresql</artifactId>
