--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,11 @@
       <version>2.3.1.RELEASE</version>
        <relativePath/>
    </parent>
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+   <properties>
+           <java-version>1.8</java-version>
+           <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+           <org.springframework-version>4.2.2.RELEASE</org.springframework-version>
+       </properties>
     <dependencies>
         <dependency>
         			<groupId>org.springframework.boot</groupId>
@@ -102,7 +104,21 @@
         		<dependency>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-mail</artifactId>
-
+                </dependency>
+           <dependency>
+               <groupId>com.squareup.okhttp</groupId>
+               <artifactId>okhttp</artifactId>
+               <version>2.7.5</version>
+           </dependency>
+           <dependency>
+               <groupId>com.google.code.gson</groupId>
+               <artifactId>gson</artifactId>
+               <version>2.8.5</version>
+           </dependency>
+                <dependency>
+                    <groupId>com.sun.mail</groupId>
+                    <artifactId>javax.mail</artifactId>
+                    <version>1.4.7</version>
                 </dependency>
     </dependencies>
 
